--- a/Resources/Prototypes/Entities/Objects/Consumable/Food/Baked/misc.yml
+++ b/Resources/Prototypes/Entities/Objects/Consumable/Food/Baked/misc.yml
@@ -172,7 +172,7 @@
   - type: Tag
     tags:
       - Nugget
-      - Meat
+      - Meat # Frontier
   - type: Sprite
     sprite: Objects/Consumable/Food/Baked/nuggets.rsi
     layers:
@@ -252,13 +252,6 @@
       map: ["pancakes9"]
       visible: false
   - type: Appearance
-  - type: SolutionContainerManager
-    solutions:
-      food:
-        maxVol: 6
-        reagents:
-        - ReagentId: Flavorol
-          Quantity: 5
   - type: Tag
     tags:
     - Pancake
@@ -315,13 +308,6 @@
     tags:
     - Pancake
     - Fruit
-  - type: SolutionContainerManager # Frontier: flavorol
-    solutions:
-      food:
-        maxVol: 6
-        reagents:
-        - ReagentId: Flavorol
-          Quantity: 5 # End Frontier: flavorol
 
 - type: entity
   name: chocolate chip pancake
@@ -376,7 +362,7 @@
       food:
         maxVol: 6
         reagents:
-        - ReagentId: Flavorol
+        - ReagentId: Nutriment
           Quantity: 5
         - ReagentId: Theobromine
           Quantity: 1
@@ -396,7 +382,7 @@
       food:
         maxVol: 20
         reagents:
-        - ReagentId: Flavorol
+        - ReagentId: Nutriment
           Quantity: 8
         - ReagentId: Vitamin
           Quantity: 1
@@ -416,7 +402,7 @@
       food:
         maxVol: 20
         reagents:
-        - ReagentId: Flavorol
+        - ReagentId: Nutriment
           Quantity: 10
         - ReagentId: Vitamin
           Quantity: 1
@@ -436,7 +422,7 @@
       food:
         maxVol: 20
         reagents:
-        - ReagentId: Flavorol
+        - ReagentId: Nutriment
           Quantity: 10
         - ReagentId: Vitamin
           Quantity: 1
@@ -456,7 +442,7 @@
       food:
         maxVol: 20
         reagents:
-        - ReagentId: Flavorol
+        - ReagentId: Nutriment
           Quantity: 8
         - ReagentId: Vitamin
           Quantity: 2
@@ -485,7 +471,7 @@
       food:
         maxVol: 20
         reagents:
-        - ReagentId: Flavorol
+        - ReagentId: Nutriment
           Quantity: 5
         - ReagentId: Vitamin
           Quantity: 1
