--- a/Resources/Prototypes/_NF/Entities/Objects/Consumable/Food/burger.yml
+++ b/Resources/Prototypes/_NF/Entities/Objects/Consumable/Food/burger.yml
@@ -47,4 +47,4 @@
     sprite: _NF/Objects/Consumable/Food/burger.rsi
     state: rosy-mothroach
   - type: Food
-    quality: Normal
+    quality: Nasty
