--- a/Resources/Prototypes/Entities/Objects/Consumable/Food/soup.yml
+++ b/Resources/Prototypes/Entities/Objects/Consumable/Food/soup.yml
@@ -15,12 +15,10 @@
   - type: SolutionContainerManager
     solutions:
       food:
-        maxVol: 35
+        maxVol: 20
         reagents:
         - ReagentId: Nutriment
           Quantity: 20
-        - ReagentId: Flavorol
-          Quantity: 10
   - type: Sprite
     sprite: Objects/Consumable/Food/bowl.rsi
   - type: DamageOnLand
@@ -86,14 +84,13 @@
   - type: SolutionContainerManager
     solutions:
       food:
-        maxVol: 20
+        maxVol: 15
         reagents:
         - ReagentId: Nutriment
           Quantity: 10
         - ReagentId: Vitamin
           Quantity: 5
-        - ReagentId: Flavorol
-          Quantity: 5
+
 # Salad
 
 - type: entity
@@ -112,7 +109,7 @@
   - type: SolutionContainerManager
     solutions:
       food:
-        maxVol: 30
+        maxVol: 22 # Frontier 15<22
         reagents:
         - ReagentId: Nutriment
           Quantity: 8
@@ -120,8 +117,6 @@
           Quantity: 6
         - ReagentId: Omnizine
           Quantity: 8
-        - ReagentId: Flavorol
-          Quantity: 5
   - type: Tag
     tags:
     - Soup
@@ -144,14 +139,12 @@
   - type: SolutionContainerManager
     solutions:
       food:
-        maxVol: 20
+        maxVol: 15
         reagents:
         - ReagentId: Nutriment
           Quantity: 8
         - ReagentId: Vitamin
           Quantity: 2
-        - ReagentId: Flavorol
-          Quantity: 5
   - type: Tag
     tags:
     - Fruit
@@ -176,15 +169,13 @@
   - type: SolutionContainerManager
     solutions:
       food:
-        maxVol: 25
+        maxVol: 15
         reagents:
         - ReagentId: Nutriment
           Quantity: 8
         - ReagentId: Vitamin
           Quantity: 2
         - ReagentId: DoctorsDelight
-          Quantity: 5
-        - ReagentId: Flavorol
           Quantity: 5
   - type: Tag
     tags:
@@ -210,7 +201,7 @@
   - type: SolutionContainerManager
     solutions:
       food:
-        maxVol: 20
+        maxVol: 15
         reagents:
         - ReagentId: Nutriment
           Quantity: 8
@@ -218,8 +209,6 @@
           Quantity: 2
         - ReagentId: Allicin
           Quantity: 3
-        - ReagentId: Flavorol
-          Quantity: 5
 
 - type: entity
   name: caesar salad
@@ -240,14 +229,12 @@
   - type: SolutionContainerManager
     solutions:
       food:
-        maxVol: 20
+        maxVol: 15
         reagents:
         - ReagentId: Nutriment
           Quantity: 8
         - ReagentId: Vitamin
           Quantity: 6
-        - ReagentId: Flavorol
-          Quantity: 5
 
 - type: entity
   name: kimchi salad
@@ -267,7 +254,7 @@
   - type: SolutionContainerManager
     solutions:
       food:
-        maxVol: 20
+        maxVol: 15
         reagents:
         - ReagentId: Nutriment
           Quantity: 8
@@ -275,8 +262,6 @@
           Quantity: 2
         - ReagentId: Allicin
           Quantity: 2
-        - ReagentId: Flavorol
-          Quantity: 5
 
 - type: entity
   name: fruit salad
@@ -294,14 +279,12 @@
   - type: SolutionContainerManager
     solutions:
       food:
-        maxVol: 15
+        maxVol: 10
         reagents:
         - ReagentId: Nutriment
           Quantity: 2
         - ReagentId: Vitamin
           Quantity: 4
-        - ReagentId: Flavorol
-          Quantity: 5
   - type: Tag
     tags:
     - Fruit
@@ -324,14 +307,12 @@
   - type: SolutionContainerManager
     solutions:
       food:
-        maxVol: 20
+        maxVol: 15
         reagents:
         - ReagentId: Nutriment
           Quantity: 7
         - ReagentId: Vitamin
           Quantity: 4
-        - ReagentId: Flavorol
-          Quantity: 5
   - type: Tag
     tags:
     - Fruit
@@ -354,14 +335,12 @@
   - type: SolutionContainerManager
     solutions:
       food:
-        maxVol: 45
+        maxVol: 38
         reagents:
         - ReagentId: Nutriment
-          Quantity: 13
+          Quantity: 18
         - ReagentId: Vitamin
           Quantity: 15
-        - ReagentId: Flavorol
-          Quantity: 12
   - type: Tag
     tags:
     - Fruit
@@ -392,8 +371,7 @@
           Quantity: 5
         - ReagentId: Omnizine
           Quantity: 5
-        - ReagentId: Flavorol
-          Quantity: 5
+
 # Rice
 
 - type: entity
@@ -455,18 +433,16 @@
   - type: SolutionContainerManager
     solutions:
       food:
-        maxVol: 45
+        maxVol: 40
         reagents:
         - ReagentId: Nutriment
-          Quantity: 13
+          Quantity: 18
         - ReagentId: Vitamin
           Quantity: 7
         - ReagentId: Dexalin ##This is probably a reference to something but I don't get it
           Quantity: 6.5
         - ReagentId: Epinephrine
           Quantity: 2
-        - ReagentId: Flavorol
-          Quantity: 10
   - type: Tag
     tags:
     - Meat
@@ -489,7 +465,7 @@
   - type: SolutionContainerManager
     solutions:
       food:
-        maxVol: 30
+        maxVol: 25
         reagents:
         - ReagentId: Nutriment
           Quantity: 9
@@ -498,8 +474,6 @@
         - ReagentId: Milk ##This is probably a reference to something but I don't get it
           Quantity: 5
         - ReagentId: Sugar
-          Quantity: 5
-        - ReagentId: Flavorol
           Quantity: 5
 
 - type: entity
@@ -521,7 +495,7 @@
   - type: SolutionContainerManager
     solutions:
       food:
-        maxVol: 17
+        maxVol: 12
         reagents:
         - ReagentId: Nutriment
           Quantity: 5
@@ -529,8 +503,6 @@
           Quantity: 3
         - ReagentId: CapsaicinOil
           Quantity: 2
-        - ReagentId: Flavorol
-          Quantity: 5
   - type: Tag
     tags:
     - Meat
@@ -555,7 +527,7 @@
   - type: SolutionContainerManager
     solutions:
       food:
-        maxVol: 25
+        maxVol: 20
         reagents:
         - ReagentId: Nutriment
           Quantity: 7
@@ -563,8 +535,6 @@
           Quantity: 2
         - ReagentId: Milk
           Quantity: 10
-        - ReagentId: Flavorol
-          Quantity: 5
 
 - type: entity
   name: space liberty duff
@@ -597,14 +567,12 @@
   - type: SolutionContainerManager
     solutions:
       food:
-        maxVol: 17
+        maxVol: 12
         reagents:
         - ReagentId: Nutriment
           Quantity: 6
         - ReagentId: Amatoxin
           Quantity: 6
-        - ReagentId: Flavorol
-          Quantity: 5
   - type: Food # Frontier
     quality: Toxin # Frontier, New Food Quality System
 # Soup
@@ -625,16 +593,14 @@
   - type: SolutionContainerManager
     solutions:
       food:
-        maxVol: 30
+        maxVol: 25 # Frontier 12<25
         reagents:
         - ReagentId: Nutriment
           Quantity: 7
         - ReagentId: Vitamin
           Quantity: 8
         - ReagentId: Water
-          Quantity: 5
-        - ReagentId: Flavorol
-          Quantity: 5
+          Quantity: 10
   - type: Tag
     tags:
     - Meat
@@ -656,16 +622,14 @@
   - type: SolutionContainerManager
     solutions:
       food:
-        maxVol: 20
+        maxVol: 16 # Frontier 12<16
         reagents:
         - ReagentId: Nutriment
           Quantity: 1
         - ReagentId: Vitamin
           Quantity: 5
         - ReagentId: Water
-          Quantity: 5
-        - ReagentId: Flavorol
-          Quantity: 5
+          Quantity: 10
 
 - type: entity
   name: tomato soup
@@ -684,15 +648,13 @@
   - type: SolutionContainerManager
     solutions:
       food:
-        maxVol: 25
+        maxVol: 18 # Frontier 12<18
         reagents:
         - ReagentId: Nutriment
           Quantity: 3
         - ReagentId: Iron
           Quantity: 10
         - ReagentId: Blood
-          Quantity: 5
-        - ReagentId: Flavorol
           Quantity: 5
   - type: Tag
     tags:
@@ -716,7 +678,7 @@
   - type: SolutionContainerManager
     solutions:
       food:
-        maxVol: 35
+        maxVol: 30
         reagents:
         - ReagentId: Protein
           Quantity: 9
@@ -724,8 +686,6 @@
           Quantity: 10
         - ReagentId: Vitamin
           Quantity: 7
-        - ReagentId: Flavorol
-          Quantity: 5
 
 - type: entity
   name: clown's tears
@@ -743,7 +703,7 @@
   - type: SolutionContainerManager
     solutions:
       food:
-        maxVol: 30
+        maxVol: 21 # Frontier 12<21
         reagents:
         - ReagentId: Nutriment
           Quantity: 2
@@ -751,8 +711,6 @@
           Quantity: 9
         - ReagentId: Water
           Quantity: 10
-        - ReagentId: Flavorol
-          Quantity: 5
 
 - type: entity
   name: vegetable soup
@@ -771,18 +729,16 @@
   - type: SolutionContainerManager
     solutions:
       food:
-        maxVol: 25
+        maxVol: 23 # Frontier 12<23
         reagents:
         - ReagentId: Nutriment
           Quantity: 5
         - ReagentId: Vitamin
           Quantity: 7
         - ReagentId: Water
-          Quantity: 5
+          Quantity: 10
         - ReagentId: Oculine
           Quantity: 1
-        - ReagentId: Flavorol
-          Quantity: 5
 
 - type: entity
   name: nettle soup
@@ -800,20 +756,18 @@
   - type: SolutionContainerManager
     solutions:
       food:
-        maxVol: 30
+        maxVol: 30 # Frontier 12<30
         reagents:
         - ReagentId: Nutriment
           Quantity: 5
         - ReagentId: Vitamin
           Quantity: 8
         - ReagentId: Water
-          Quantity: 5
+          Quantity: 10
         - ReagentId: Omnizine
           Quantity: 5
         - ReagentId: Histamine
           Quantity: 0.5
-        - ReagentId: Flavorol
-          Quantity: 5
 
 - type: entity
   name: mystery soup
@@ -845,7 +799,7 @@
   - type: SolutionContainerManager
     solutions:
       food:
-        maxVol: 25
+        maxVol: 20
         reagents:
           - ReagentId: Nutriment
             Quantity: 8
@@ -855,8 +809,6 @@
             Quantity: 4
           - ReagentId: Allicin
             Quantity: 3
-          - ReagentId: Flavorol
-            Quantity: 5
   - type: Tag
     tags:
     - ChiliBowl
@@ -885,8 +837,6 @@
             Quantity: 8
           - ReagentId: Vitamin
             Quantity: 4
-          - ReagentId: Flavorol
-            Quantity: 5
   - type: Tag
     tags:
     - ChiliBowl
@@ -910,7 +860,7 @@
   - type: SolutionContainerManager
     solutions:
       food:
-        maxVol: 25
+        maxVol: 20
         reagents:
           - ReagentId: Nutriment
             Quantity: 6
@@ -920,8 +870,6 @@
             Quantity: 4
           - ReagentId: Allicin
             Quantity: 3
-          - ReagentId: Flavorol
-            Quantity: 5
   - type: Tag
     tags:
     - ChiliBowl
@@ -943,7 +891,7 @@
   - type: SolutionContainerManager
     solutions:
       food:
-        maxVol: 25
+        maxVol: 20
         reagents:
           - ReagentId: Nutriment
             Quantity: 10
@@ -953,8 +901,6 @@
             Quantity: 1
           - ReagentId: Blackpepper
             Quantity: 1
-          - ReagentId: Flavorol
-            Quantity: 5
   - type: Tag
     tags:
     - Meat
@@ -983,9 +929,7 @@
           - ReagentId: Vitamin
             Quantity: 5
           - ReagentId: Water
-            Quantity: 5
-          - ReagentId: Flavorol
-            Quantity: 5
+            Quantity: 10
   - type: Tag
     tags:
     - Fruit
@@ -1008,14 +952,12 @@
   - type: SolutionContainerManager
     solutions:
       food:
-        maxVol: 17
+        maxVol: 12
         reagents:
           - ReagentId: Nutriment
             Quantity: 5
           - ReagentId: Vitamin
             Quantity: 3
-          - ReagentId: Flavorol
-            Quantity: 5
   - type: Tag
     tags:
     - Meat
@@ -1050,9 +992,7 @@
           - ReagentId: Vitamin
             Quantity: 3
           - ReagentId: Water
-            Quantity: 5
-          - ReagentId: Flavorol
-            Quantity: 5
+            Quantity: 10
   - type: Tag
     tags:
     - Meat
@@ -1074,7 +1014,7 @@
   - type: SolutionContainerManager
     solutions:
       food:
-        maxVol: 30
+        maxVol: 25
         reagents:
           - ReagentId: Nutriment
             Quantity: 2
@@ -1083,8 +1023,6 @@
           - ReagentId: Water
             Quantity: 5
           - ReagentId: Milk
-            Quantity: 5
-          - ReagentId: Flavorol
             Quantity: 5
 
 - type: entity
@@ -1107,9 +1045,7 @@
           - ReagentId: Vitamin
             Quantity: 7
           - ReagentId: Water
-            Quantity: 5
-          - ReagentId: Flavorol
-            Quantity: 5
+            Quantity: 10
 # Tastes like borsch, bortsch, borstch, borsh, borshch, borscht.
 
 - type: entity
@@ -1125,14 +1061,12 @@
   - type: SolutionContainerManager
     solutions:
       food:
-        maxVol: 20
+        maxVol: 15
         reagents:
           - ReagentId: Nutriment
             Quantity: 4
           - ReagentId: Vitamin
             Quantity: 6
-          - ReagentId: Flavorol
-            Quantity: 5
 # Tastes like beet.
 
 - type: entity
@@ -1153,16 +1087,14 @@
   - type: SolutionContainerManager
     solutions:
       food:
-        maxVol: 30
+        maxVol: 22 # Frontier 15<22
         reagents:
           - ReagentId: Nutriment
-            Quantity: 10
+            Quantity: 15
           - ReagentId: Protein
             Quantity: 5
           - ReagentId: Vitamin
             Quantity: 2
-          - ReagentId: Flavorol
-            Quantity: 10
   - type: Tag
     tags:
     - Meat
@@ -1185,13 +1117,11 @@
   - type: SolutionContainerManager
     solutions:
       food:
-        maxVol: 17
+        maxVol: 12
         reagents:
           - ReagentId: Nutriment
             Quantity: 4
           - ReagentId: Vitamin
-            Quantity: 5
-          - ReagentId: Flavorol
             Quantity: 5
 # Tastes like sweet potato.
 
@@ -1211,15 +1141,13 @@
   - type: SolutionContainerManager
     solutions:
       food:
-        maxVol: 16
+        maxVol: 11 # Frontier 10<11
         reagents:
           - ReagentId: Nutriment
             Quantity: 1
           - ReagentId: Vitamin
             Quantity: 5
           - ReagentId: Allicin
-            Quantity: 5
-          - ReagentId: Flavorol
             Quantity: 5
 
 - type: entity
@@ -1238,7 +1166,7 @@
   - type: SolutionContainerManager
     solutions:
       food:
-        maxVol: 35
+        maxVol: 30
         reagents:
           - ReagentId: Nutriment
             Quantity: 6
@@ -1247,8 +1175,6 @@
           - ReagentId: Protein
             Quantity: 6
           - ReagentId: Water
-            Quantity: 5
-          - ReagentId: Flavorol
             Quantity: 5
 # Tastes like crab.
 
@@ -1269,14 +1195,12 @@
   - type: SolutionContainerManager
     solutions:
       food:
-        maxVol: 15
+        maxVol: 10
         reagents:
           - ReagentId: Nutriment
             Quantity: 3
           - ReagentId: Licoxide
             Quantity: 6
-          - ReagentId: Flavorol
-            Quantity: 5
 
 - type: entity
   name: bungo curry
@@ -1294,7 +1218,7 @@
   - type: SolutionContainerManager
     solutions:
       food:
-        maxVol: 35
+        maxVol: 16 # Frontier 15<16
         reagents:
           - ReagentId: Nutriment
             Quantity: 6
@@ -1302,8 +1226,6 @@
             Quantity: 5
           - ReagentId: CapsaicinOil
             Quantity: 5
-          - ReagentId: Flavorol
-            Quantity: 15
   - type: Tag
     tags:
     - Fruit
