Sign smuggling faxes, hints (with no stamp)

--- a/Resources/Prototypes/_NF/Events/nf_events.yml
+++ b/Resources/Prototypes/_NF/Events/nf_events.yml
@@ -72,6 +72,10 @@
     name: deaddrop-faxed-hint-name
     prototypeId: PaperDeadDropFax
     content: deaddrop-faxed-hint-content # Default contents, will be edited.
+    stampedBy:
+    - stampedName: deaddrop-faxed-hint-signature
+      stampedColor: "#850000"
+    stampState: paper_stamp-syndicate
     preFaxActions:
     - !type:GetRandomDeadDropAction
 
@@ -89,5 +93,9 @@
     name: deaddrop-faxed-hint-name
     prototypeId: PaperDeadDropFax
     content: deaddrop-faxed-hint-content # Default contents, will be edited.
+    stampedBy:
+    - stampedName: deaddrop-faxed-hint-signature
+      stampedColor: "#850000"
+    stampState: paper_stamp-syndicate
     preFaxActions:
     - !type:GetRandomDeadDropAction
