--- a/Resources/Prototypes/Entities/Structures/Machines/lathe.yml
+++ b/Resources/Prototypes/Entities/Structures/Machines/lathe.yml
@@ -1336,6 +1336,8 @@
     - BioGenMaterialCloth1
     - BioGenMaterialCardboard1
     - BioGenPaper
+    - NFBioGenWoodPlank # Frontier
+    - NFBioGenPaperSheet # Frontier
     - BioGenPaperRolling1
     - BioGenCandle
     - BioGenPlantBGone
