--- a/Resources/Prototypes/_NF/Entities/Structures/Machines/lathe.yml
+++ b/Resources/Prototypes/_NF/Entities/Structures/Machines/lathe.yml
@@ -246,6 +246,7 @@
     ## Materials
       - SheetPaper
       - NFMaterialCardboard1Processed
+      - PaperFromSheetPaper
     ## Misc
       - ClothingHeadHatCone
       - FireExtinguisher
