--- a/Resources/Prototypes/_NF/Recipes/Lathes/materials.yml
+++ b/Resources/Prototypes/_NF/Recipes/Lathes/materials.yml
@@ -2,9 +2,36 @@
 - type: latheRecipe
   id: Durathread
   result: MaterialDurathread1
-  completetime: 0
+  completetime: 1
   category: NFMaterials
   applyMaterialDiscount: false
   materials:
     Plastic: 100
     Cloth: 100
+
+- type: latheRecipe
+  id: NFBioGenWoodPlank
+  result: MaterialWoodPlank1
+  completetime: 1
+  category: Materials
+  applyMaterialDiscount: false
+  materials:
+    Biomass: 50
+
+- type: latheRecipe # TODO: move somewhere else
+  id: PaperFromSheetPaper
+  result: Paper
+  category: NFMaterials
+  applyMaterialDiscount: false
+  completetime: 1
+  materials:
+    Paper: 10
+
+- type: latheRecipe # TODO: move somewhere else
+  id: NFBioGenPaperSheet
+  result: SheetPaper1
+  category: Materials
+  applyMaterialDiscount: false
+  completetime: 1
+  materials:
+    Biomass: 20
