--- a/Resources/Prototypes/_NF/Entities/Mobs/NPCs/mob_hostile_expeditions_explorers.yml
+++ b/Resources/Prototypes/_NF/Entities/Mobs/NPCs/mob_hostile_expeditions_explorers.yml
@@ -359,7 +359,7 @@
   categories: [ HideSpawnMenu ]
   parent:
   - MobExplorerBase
-  - MobLaserReflect # Added to prevent laser abuse from players
+  #- MobLaserReflect # Added to prevent laser abuse from players
   id: MobExplorerHauler
   description: |- 
    Loaded with heavy equipment for industrial-scale looting. Pardon me, "asset recovery".
