--- a/Resources/Prototypes/_NF/ai_factions.yml
+++ b/Resources/Prototypes/_NF/ai_factions.yml
@@ -538,10 +538,10 @@
   - Mouse
   - Zombie
   ## Frontier Factions
-  - Felinid
+  #- Felinid
   - Monkey
-  - Goblin
-  - ChaplainClothes
+  #- Goblin
+  #- ChaplainClothes
 
 - type: npcFaction
   id: GoblinbaneProvokedFaction
