--- a/Resources/Prototypes/_NF/Entities/Clothing/Masks/specific.yml
+++ b/Resources/Prototypes/_NF/Entities/Clothing/Masks/specific.yml
@@ -1,12 +1,13 @@
-﻿- type: entity
+﻿# FRONTIER MERGE: fix these entities and references to them depending on what happens with the voice mask
+- type: entity
   parent:
   - ClothingMaskGasVoiceChameleon
   - ContrabandClothing
   id: ClothingMaskGasVoiceChameleonFakeName
   suffix: Voice Mask, Chameleon, Radio Fake Name
-  components:
-    - type: VoiceMasker
-      radioMode: Fake
+  # components:
+  #   - type: VoiceMasker
+  #     radioMode: Fake
 
 - type: entity
   parent:
@@ -14,6 +15,6 @@
   - ContrabandClothing
   id: ClothingMaskGasVoiceChameleonRealName
   suffix: Voice Mask, Chameleon, Radio Real Name
-  components:
-    - type: VoiceMasker
-      radioMode: Real
+  # components:
+  #   - type: VoiceMasker
+  #     radioMode: Real
