--- a/Resources/Prototypes/Entities/Objects/Devices/Syndicate_Gadgets/camera_bug.yml
+++ b/Resources/Prototypes/Entities/Objects/Devices/Syndicate_Gadgets/camera_bug.yml
@@ -1,6 +1,6 @@
 - type: entity
   id: CameraBug
-  parent: [ BaseItem, BaseSyndicateContraband ]
+  parent: [ BaseItem, BaseC3ContrabandNoValue ] # Frontier: BaseSyndicateContraband<BaseC3ContrabandNoValue
   name: camera bug
   description: An illegal syndicate device that allows you to hack into the station's camera network.
   components:
