--- a/Resources/Prototypes/_NF/Entities/Objects/Weapons/Guns/Ammunition/Projectiles/shotgun.yml
+++ b/Resources/Prototypes/_NF/Entities/Objects/Weapons/Guns/Ammunition/Projectiles/shotgun.yml
@@ -1,9 +1,9 @@
 
 - type: entity
-  id: PelletShotgunNet
-  name: net (.50)
+  id: PelletShotgunHighExSlug
+  name: highex slug (.50)
   categories: [ HideSpawnMenu ]
-  parent: BaseBullet
+  parent: BaseBulletTrigger
   components:
   - type: Sprite
     sprite: Objects/Weapons/Guns/Projectiles/projectiles2.rsi
@@ -11,12 +11,42 @@
   - type: Projectile
     damage:
       types:
-        Blunt: 10
-  - type: Ensnaring
-    freeTime: 2.0
-    breakoutTime: 3.5 #all bola should generally be fast to remove
-    walkSpeed: 0.7 #makeshift bola shouldn't slow too much
-    sprintSpeed: 0.7
-    staminaDamage: 20 # Sudden weight increase sapping stamina
-    #canThrowTrigger: true
-    canMoveBreakout: true
+        Blunt: 5
+  - type: ExplodeOnTrigger
+  - type: Explosive
+    explosionType: Default
+    maxIntensity: 1
+    intensitySlope: 2
+    totalIntensity: 1
+    maxTileBreak: 0
+  - type: PointLight
+    radius: 1.3
+    color: orange
+    energy: 0.8
+
+- type: entity # TODO: add chem transfer mechanics from syringe gun once available
+  id: PelletShotgunSyringe
+  name: pellet (.50 syringe)
+  categories: [ HideSpawnMenu ]
+  parent: BaseBulletPractice
+  components:
+  - type: Sprite
+    sprite: Objects/Weapons/Guns/Projectiles/projectiles2.rsi
+    state: buckshot
+  - type: Projectile
+    damage:
+      types:
+        Slash: 10
+  - type: SolutionContainerManager
+    solutions:
+      ammo:
+        maxVol: 2
+  - type: RefillableSolution
+    solution: ammo
+  - type: DrainableSolution
+    solution: ammo
+  - type: SolutionInjectOnProjectileHit
+    transferAmount: 2
+    solution: ammo
+  - type: InjectableSolution
+    solution: ammo
