--- a/Resources/Prototypes/_NF/Body/Prototypes/digestion.yml
+++ b/Resources/Prototypes/_NF/Body/Prototypes/digestion.yml
@@ -41,7 +41,7 @@
   categories: [ HideSpawnMenu ]
   effects:
   - conversions:
-      Carpotoxin:
+      CarpoToxin:
         Nutriment: 0.5
         Vitamin: 0.25
         Protein: 0.25
