--- a/Resources/Prototypes/Nyanotrasen/Body/Organs/felinid.yml
+++ b/Resources/Prototypes/Nyanotrasen/Body/Organs/felinid.yml
@@ -2,7 +2,7 @@
 - type: entity
   id: OrganFelinidStomach
   parent: OrganAnimalStomach
-  noSpawn: true
+  categories: [ HideSpawnMenu ]
   components:
   - type: Stomach
     digestion: Felinid
