--- a/Resources/Prototypes/_NF/Recipes/Construction/Graphs/weapons/improvised_bolt.yml
+++ b/Resources/Prototypes/_NF/Recipes/Construction/Graphs/weapons/improvised_bolt.yml
@@ -127,6 +127,12 @@
           sprite: Objects/Weapons/Guns/Ammunition/Casings/shotgun_shell.rsi
           state: base
         doAfter: 1
+      - component: Explosive
+        name: Firebomb
+        icon:
+          sprite: Objects/Weapons/Bombs/ied.rsi
+          state: base
+        doAfter: 1
   - node: CraftCrossbowBoltExplosive
     entity: CrossbowBoltExplosive
 
@@ -140,16 +146,31 @@
       steps:
       - material: MetalRod
         amount: 1
-        doAfter: 0.5
+        doAfter: 0.4
       - material: Cloth
         amount: 1
-        doAfter: 0.5
-      - tag: PowerCellSmall
-        name: Small power cell
+        doAfter: 0.4
+      - material: Cable
+        amount: 5
+        doAfter: 0.4
+      - component: PowerCell
+        name: Power cell
         icon:
           sprite: Objects/Power/power_cells.rsi
-          state: small
-        doAfter: 1
+          state: high
+        doAfter: 0.4
+      - component: LogicGate
+        name: Logic gate
+        icon:
+          sprite: Objects/Devices/gates.rsi
+          state: base
+        doAfter: 0.4
+      - component: LogicGate
+        name: Logic gate
+        icon:
+          sprite: Objects/Devices/gates.rsi
+          state: base
+        doAfter: 0.4
   - node: CraftCrossbowBoltEMP
     entity: CrossbowBoltEMP
 
