--- a/Resources/Prototypes/_NF/Recipes/Construction/Graphs/weapons/improvised_bolt.yml
+++ b/Resources/Prototypes/_NF/Recipes/Construction/Graphs/weapons/improvised_bolt.yml
@@ -165,12 +165,6 @@
           sprite: Objects/Devices/gates.rsi
           state: base
         doAfter: 0.4
-      - component: LogicGate
-        name: Logic gate
-        icon:
-          sprite: Objects/Devices/gates.rsi
-          state: base
-        doAfter: 0.4
   - node: CraftCrossbowBoltEMP
     entity: CrossbowBoltEMP
 
@@ -196,3 +190,26 @@
         doAfter: 1
   - node: CraftCrossbowBoltIncendiary
     entity: CrossbowBoltIncendiary
+
+- type: constructionGraph
+  id: CraftCrossbowBoltShrapnel
+  start: start
+  graph:
+  - node: start
+    edges:
+    - to: CraftCrossbowBoltShrapnel
+      steps:
+      - material: MetalRod
+        amount: 1
+        doAfter: 0.5
+      - material: Cloth
+        amount: 1
+        doAfter: 0.5
+      - tag: ShellShotgun
+        name: Shotgun shell
+        icon:
+          sprite: Objects/Weapons/Guns/Ammunition/Casings/shotgun_shell.rsi
+          state: base
+        doAfter: 1
+  - node: CraftCrossbowBoltShrapnel
+    entity: CrossbowBoltShrapnel
