--- a/Resources/Prototypes/_NF/Recipes/Construction/weapons.yml
+++ b/Resources/Prototypes/_NF/Recipes/Construction/weapons.yml
@@ -98,6 +98,17 @@
   objectType: Item
 
 - type: construction
+  name: shrapnel bolt
+  id: CraftCrossbowBoltShrapnel
+  graph: CraftCrossbowBoltShrapnel
+  startNode: start
+  targetNode: CraftCrossbowBoltShrapnel
+  category: construction-category-weapons
+  description: A bolt with a buckshot shotgun shell attached to it.
+  icon: { sprite: _NF/Objects/Weapons/Guns/Projectiles/crossbow_bolts.rsi, state: icon-bolt-shell }
+  objectType: Item
+
+- type: construction
   name: wooden stake
   id: RecipeWoodenStake
   graph: WoodenStakeCraftingGraph
