--- a/Resources/Prototypes/Entities/Structures/Machines/lathe.yml
+++ b/Resources/Prototypes/Entities/Structures/Machines/lathe.yml
@@ -1338,6 +1338,7 @@
     - BioGenPaper
     - NFBioGenWoodPlank # Frontier
     - NFBioGenPaperSheet # Frontier
+    - NFBioGenSheetPlastic # Frontier
     - BioGenPaperRolling1
     - BioGenCandle
     - BioGenPlantBGone
