--- a/Resources/Prototypes/_NF/Recipes/Lathes/materials.yml
+++ b/Resources/Prototypes/_NF/Recipes/Lathes/materials.yml
@@ -16,12 +16,21 @@
   category: Materials
   applyMaterialDiscount: false
   materials:
-    Biomass: 50
+    Biomass: 15
+
+- type: latheRecipe
+  id: NFBioGenSheetPlastic
+  result: SheetPlastic1
+  completetime: 10
+  category: Materials
+  applyMaterialDiscount: false
+  materials:
+    Biomass: 40
 
 - type: latheRecipe # TODO: move somewhere else
   id: PaperFromSheetPaper
   result: Paper
-  category: NFMaterials
+  category: Materials
   applyMaterialDiscount: false
   completetime: 1
   materials:
@@ -34,4 +43,4 @@
   applyMaterialDiscount: false
   completetime: 1
   materials:
-    Biomass: 20
+    Biomass: 10
