--- a/Resources/Prototypes/XenoArch/Effects/normal_effects.yml
+++ b/Resources/Prototypes/XenoArch/Effects/normal_effects.yml
@@ -120,12 +120,12 @@
   targetDepth: 0
   effectHint: artifact-effect-hint-creation
   components:
-  - type: SpawnArtifact
-    maxSpawns: 20
-    spawns:
-    - id: FoodBanana
-      amount: 2 # Frontier 3<2
-      maxAmount: 4 # Frontier 6<4
+  # - type: SpawnArtifact
+    # maxSpawns: 20
+    # spawns:
+    # - id: FoodBanana
+      # amount: 3
+      # maxAmount: 6
   - type: ChemicalPuddleArtifact
     chemicalSolution:
       maxVol: 100
@@ -591,24 +591,6 @@
     - shuffle-artifact-popup
 
 - type: artifactEffect
-  id: EffectT4PartsSpawn
-  targetDepth: 3
-  effectHint: artifact-effect-hint-creation
-  components:
-  - type: SpawnArtifact
-    maxSpawns: 10
-    spawns:
-    - id: QuadraticCapacitorStockPart
-      prob: 0.5
-      maxAmount: 3
-    - id: FemtoManipulatorStockPart
-      prob: 0.5
-      maxAmount: 3
-    - id: BluespaceMatterBinStockPart
-      prob: 0.5
-      maxAmount: 3
-
-- type: artifactEffect
   id: EffectFoamDangerous
   targetDepth: 3
   effectHint: artifact-effect-hint-biochemical
@@ -674,14 +656,14 @@
     maxIntensity: 50
     canCreateVacuum: false
 
-#- type: artifactEffect # Frontier
-#  id: EffectPortal
-#  targetDepth: 3
-#  effectHint: artifact-effect-hint-displacement
-#  components:
-#  - type: PortalArtifact
+# - type: artifactEffect
+  # id: EffectPortal
+  # targetDepth: 3
+  # effectHint: artifact-effect-hint-displacement
+  # components:
+  # - type: PortalArtifact
 
-# - type: artifactEffect # Frontier
+# - type: artifactEffect
   # id: EffectSingulo
   # targetDepth: 10
   # effectHint: artifact-effect-hint-destruction
@@ -690,3 +672,13 @@
     # maxSpawns: 1
     # spawns:
     # - id: Singularity
+
+# - type: artifactEffect
+  # id: EffectTesla
+  # targetDepth: 10
+  # effectHint: artifact-effect-hint-destruction
+  # components:
+  # - type: SpawnArtifact
+    # maxSpawns: 1
+    # spawns:
+    # - id: TeslaEnergyBall
