--- a/Resources/Prototypes/_NF/XenoArch/Effects/normal_effects.yml
+++ b/Resources/Prototypes/_NF/XenoArch/Effects/normal_effects.yml
@@ -24,5 +24,5 @@
   - type: SpawnArtifact
     maxSpawns: 10
     spawns:
-    - id: BluespaceCrystal
+    - id: MaterialBluespace1
       maxAmount: 3
