--- a/Resources/Prototypes/Roles/Jobs/departments.yml
+++ b/Resources/Prototypes/Roles/Jobs/departments.yml
@@ -10,7 +10,7 @@
 - type: department
   id: Civilian
   name: department-Civilian
-  description: department-Civilian-description
+  description: department-NFCivilian-description # Frontier
   color: "#9FED58"
   weight: 0 # Frontier: -10<0 accounted for in jobs
   roles:
@@ -48,7 +48,7 @@
 - type: department
   id: CentralCommand
   name: department-CentralCommand
-  description: department-CentralCommand-description
+  description: department-NFCentralCommand-description # Frontier
   color: "#0c344d"
   roles:
   - CentralCommandOfficial
@@ -66,8 +66,8 @@
 
 - type: department
   id: Command
-  name: department-Command
-  description: department-Command-description
+  name: department-NFCommand # Frontier
+  description: department-NFCommand-description # Frontier
   color: "#334E6D"
   roles:
   # - Captain # Frontier
@@ -113,8 +113,8 @@
 
 - type: department
   id: Security
-  name: department-Security
-  description: department-Security-description
+  name: department-NFSecurity # Frontier
+  description: department-NFSecurity-description # Frontier
   color: "#5C7D4D" # Frontier: DE3A3A<5C7D4D
   weight: 1 # Frontier: 20<1 - accounted for in jobs
   roles:
