--- a/Resources/Prototypes/Roles/Jobs/departments.yml
+++ b/Resources/Prototypes/Roles/Jobs/departments.yml
@@ -14,36 +14,25 @@
   color: "#9FED58"
   weight: 0 # Frontier: -10<0 accounted for in jobs
   roles:
-  - Bartender
-  - Botanist
-  - Boxer
-  - Chaplain
-  - Chef
-  - Clown
-#  - HeadOfPersonnel
-  - Lawyer
-  - Librarian
-  - Mime
-  - Musician
-  - Passenger
-  - Reporter
-  - Visitor
-  - Zookeeper
-  - ServiceWorker
+  # - Bartender # Frontier
+  # - Botanist # Frontier
+  # - Boxer # Frontier
+  # - Chaplain # Frontier
+  # - Chef # Frontier
+  # - Clown # Frontier
+  # - HeadOfPersonnel # Frontier
+  # - Lawyer # Frontier
+  # - Librarian # Frontier
+  # - Mime # Frontier
+  # - Musician # Frontier
+  # - Passenger # Frontier
+  # - Reporter # Frontier
+  # - Visitor # Frontier
+  # - Zookeeper # Frontier
+  # - ServiceWorker # Frontier
   - Contractor # Frontier
   - Mercenary # Frontier
   - Pilot # Frontier
-  - Captain # Frontier
-  - ChiefEngineer # Frontier
-  - AtmosphericTechnician # Frontier
-  - StationEngineer # Frontier
-  - TechnicalAssistant # Frontier
-  - ResearchDirector # Frontier
-  - Scientist # Frontier
-  - ResearchAssistant # Frontier
-  - Quartermaster # Frontier
-  - CargoTechnician # Frontier
-  - SalvageSpecialist # Frontier
 
 - type: department
   id: CentralCommand
@@ -52,14 +41,14 @@
   color: "#0c344d"
   roles:
   - CentralCommandOfficial
-  - CBURN
+#  - CBURN # Frontier
   - ERTLeader
   - ERTChaplain
   - ERTJanitor
   - ERTMedical
   - ERTSecurity
   - ERTEngineer
-  - DeathSquad
+#  - DeathSquad # Frontier
   - ERTMailCarrier # Frontier
   editorHidden: true
   weight: 120
@@ -73,23 +62,22 @@
   # - Captain # Frontier
   # - ChiefEngineer # Frontier
   # - ChiefMedicalOfficer # Frontier
-  - HeadOfPersonnel # Frontier: Not shown but needed here for playtime
-  - HeadOfSecurity # Frontier: Not shown but needed here for playtime
+  # - HeadOfPersonnel # Frontier
+  # - HeadOfSecurity # Frontier
   # - ResearchDirector # Frontier
   # - Quartermaster # Frontier
-  - CentralCommandOfficial
-  - CBURN
-  - ERTLeader
-  - ERTChaplain
-  - ERTJanitor
-  - ERTMedical
-  - ERTSecurity
-  - ERTEngineer
-  - DeathSquad
+  # - CentralCommandOfficial # Frontier
+  # - CBURN # Frontier
+  # - ERTLeader # Frontier
+  # - ERTChaplain # Frontier
+  # - ERTJanitor # Frontier
+  # - ERTMedical # Frontier
+  # - ERTSecurity # Frontier
+  # - ERTEngineer # Frontier
+  # - DeathSquad # Frontier
   - StationRepresentative # Frontier
   - Sheriff  # Frontier
   - StationTrafficController # Frontier
-  - ERTMailCarrier # Frontier
   primary: false
   weight: 2 # Frontier: 100<2 - accounted for in jobs
 
@@ -118,11 +106,11 @@
   color: "#5C7D4D" # Frontier: DE3A3A<5C7D4D
   weight: 1 # Frontier: 20<1 - accounted for in jobs
   roles:
-  - Detective # Frontier - No Longer Usable
-  - HeadOfSecurity # Frontier - No Longer Usable
-  - SecurityCadet # Frontier - No Longer Usable
-  - SecurityOfficer # Frontier - No Longer Usable
-  - Warden # Frontier - No Longer Usable
+#  - Detective # Frontier
+#  - HeadOfSecurity # Frontier
+#  - SecurityCadet # Frontier
+#  - SecurityOfficer # Frontier
+#  - Warden # Frontier
   - PrisonGuard ##nyano
   - Brigmedic # Frontier
 #  - SecurityGuard # Frontier
@@ -151,7 +139,6 @@
   roles:
   - Borg
   - StationAi
-  editorHidden: true # Frontier
 
 - type: department
   id: Specific
